--- a/SharpCord.csproj
+++ b/SharpCord.csproj
@@ -11,4 +11,9 @@
       <DocumentationFile>bin\Debug\SharpCord.xml</DocumentationFile>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Concentus" Version="2.2.2" />
+      <PackageReference Include="NaCl.Core" Version="2.0.6" />
+    </ItemGroup>
+
 </Project>
